--- a/views/package.json
+++ b/views/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^12.20.20",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
@@ -40,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:1203"
+  "proxy": "http://localhost:1203",
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.8"
+  }
 }
